Fix spacings

--- a/app/css/pages/profile-solutions.css
+++ b/app/css/pages/profile-solutions.css
@@ -19,7 +19,7 @@
             }
         }
         & .solutions {
-            @apply grid grid-cols-3 gap-x-48 gap-y-32;
+            @apply grid grid-cols-3 gap-x-16 gap-y-24;
         }
     }
 }
